@@ -132,7 +132,7 @@ database::database(system_path const & fn) :
   // non-alphabetic ordering of tables in sql source files. we could create
   // a temporary db, write our intended schema into it, and read it back,
   // but this seems like it would be too rude. possibly revisit this issue.
-  schema("9d2b5d7b86df00c30ac34fe87a3c20f1195bb2df"),
+  schema("5fdc2e50f0328d9a663da98722413d964438b5fe"),
   pending_writes_size(0),
   __sql(NULL),
   transaction_level(0)
