@@ -1058,6 +1058,23 @@ migrate_files_BLOB(sqlite3 * sql,
   return true;
 }
 
+static bool
+migrate_add_heights(sqlite3 *sql, char ** errmsg, app_state *app)
+{
+  int res;
+
+  res = logged_sqlite3_exec(sql,
+                            "CREATE TABLE heights\n"
+                            "(\n"
+                            "revision not null,	-- joins with revisions.id\n"
+                            "height not null,	-- blob containing the height in ubeb64 format\n"
+                            "unique(revision, height)\n"
+                            ");", NULL, NULL, errmsg);
+  if (res != SQLITE_OK)
+    return false;
+  return true;
+}
+
 void
 migrate_monotone_schema(sqlite3 *sql, app_state *app)
 {
@@ -1092,11 +1109,14 @@ migrate_monotone_schema(sqlite3 *sql, app_state *app)
   m.add("1db80c7cee8fa966913db1a463ed50bf1b0e5b0e",
         &migrate_files_BLOB);
 
+  m.add("9d2b5d7b86df00c30ac34fe87a3c20f1195bb2df",
+        &migrate_add_heights);
+
   // IMPORTANT: whenever you modify this to add a new schema version, you must
   // also add a new migration test for the new schema version.  See
   // tests/t_migrate_schema.at for details.
 
-  m.migrate(sql, "9d2b5d7b86df00c30ac34fe87a3c20f1195bb2df");
+  m.migrate(sql, "5fdc2e50f0328d9a663da98722413d964438b5fe");
 }
 
 // Local Variables:
